update manage route 2

--- a/src/app/page/Company/companypage/companypage.component.html
+++ b/src/app/page/Company/companypage/companypage.component.html
@@ -108,7 +108,7 @@
       </mat-tab>
 
       <!-- dropoint -->
-      <mat-tab label="Drop Point" >
+      <mat-tab label="Drop Point" *ngIf="false">
         <app-droppointcomppage [activecompany]="activecompany"></app-droppointcomppage>
       </mat-tab>
 
