--- a/src/app/page/Plan/selectvehicleplanpage/selectvehicleplanpage.component.html
+++ b/src/app/page/Plan/selectvehicleplanpage/selectvehicleplanpage.component.html
@@ -4,7 +4,7 @@
         style="display: flex; justify-content: space-between; align-items: center; width:100%; margin: 0;">
 
         <div class="col-1" style="display: flex; justify-content: center; align-items: center; padding:5px ;">
-            <img class="profileimg me-4">
+            <img class="profileimg me-4" [src]="activevihicle.driverimage">
         </div>
 
         <div class="col-7" style="display: flex; justify-content: start; align-items: center; padding:5px ;">
