--- a/src/app/page/Route/routecomppage/routecomppage.component.html
+++ b/src/app/page/Route/routecomppage/routecomppage.component.html
@@ -18,17 +18,17 @@
                 <div class="row">
                     <div class="col" style="display: flex; align-items: center;"
                         [style.background-color]="show.viewtype==0?'#FFE5B4':'#FFFFFF'"
-                        matTooltip="แสดงภาพรวมพนักงานขับรถ" (click)="show.viewtype=0">
+                        matTooltip="แสดงภาพรวมพนักงานขับรถ" (click)="showroutetab(0)">
                         <mat-icon style="width: 100%; color: blue;">dashboard</mat-icon>
                     </div>
                     <div class="col" style="display: flex; align-items: center;"
                         [style.background-color]="show.viewtype==1?'#FFE5B4':'#FFFFFF'"
-                        matTooltip="แสดงตามกลุ่มสถานะ" (click)="show.viewtype=1">
+                        matTooltip="แสดงตามกลุ่มสถานะ" (click)="showroutetab(1)">
                         <mat-icon style="width: 100%; color: blue;">dns</mat-icon>
                     </div>
                     <div class="col" style="display: flex; align-items: center;"
                         [style.background-color]="show.viewtype==2?'#FFE5B4':'#FFFFFF'"
-                        matTooltip="แสดงรายพนักงานขับรถ" (click)="show.viewtype=2">
+                        matTooltip="แสดงรายพนักงานขับรถ" (click)="showroutetab(2)">
                         <mat-icon style="width: 100%; color: blue;">list</mat-icon>
                     </div>
                 </div>
@@ -40,58 +40,28 @@
         <div class="container"  style="height: 80vh; width:100vw;  overflow-x: scroll;">
             <div class="row" style=" margin: 0; padding: 0; gap: 0;" [style.background-color]="dayplan.colorday" >
                 <div class="container" style="display: flex; align-items: center;">
-                    <div class="col-4" style="text-align: center;">
+                    <div class="col-2" style="text-align: center;">
                         ข้อมูลแผนการเดินรถรายวัน
                     </div>
-                    <div class="col-1" style="justify-content: center; text-align: start;" (click) = "getdayplan(-1)"
-                        *ngIf="dayplan.plandate>dayplan.today">
+                    <div class="col-1" style="justify-content: center; text-align: start;" (click) = "movedayplan(-1)">
+                        <!-- *ngIf="dayplan.plandate>dayplan.today" -->
                         <mat-icon>navigate_before</mat-icon>
                     </div>
-                    <div class="col-6" style="justify-content: center; text-align: center;">
+                    <div class="col-7" style="justify-content: center; text-align: center;">
                         {{ dayplan.plandate | date: 'EEEE' }}  ที่ {{dayplan.plandate  | date: 'dd MMMM yyyy'}} 
                     </div>
-                    <div class="col-1" style="justify-content: center; text-align: end;" (click) = "getdayplan(1)">
+                    <div class="col-1" style="justify-content: center; text-align: end;" (click) = "movedayplan(1)">
                         <mat-icon>navigate_next</mat-icon>
-                    </div>               
+                    </div>    
+                    <div class="col-1" style="justify-content: center; text-align: end; cursor: pointer; " 
+                        *ngIf="!dayplan.noplan"  (click) = "setdayplanfromweekplan(undefined)">
+                        <mat-icon style="color: blue;"  >content_copy</mat-icon>
+                    </div>             
+                    <div class="col-1" style="justify-content: center; text-align: end; cursor: pointer; " 
+                        *ngIf="dayplan.noplan" (click) = "deldayplan(undefined)">
+                        <mat-icon style="color: red;" >delete</mat-icon>
+                    </div>             
                 </div>               
-            </div>
-            
-            <!-- ====== Time ====== -->
-            <div class="row" style=" margin: 0; padding: 0; gap: 0;" [style.background-color]="dayplan.colorday"  >
-                <div class="container" style="display: flex; align-items: center;">
-                    <!-- Routename Name -->
-                    <div class="col-2" style="text-align: center;">
-                        เส้นทาง :
-                    </div> 
-                    <!-- Vehicle & Time -->          
-                    <div class="col-10" style="text-align: center;">
-                        <div class="container" style="display: flex; align-items: center;">
-                              <!-- Vehicle-->        
-                            <div class="col-3" style="text-align: center;">
-                                รถ :
-                            </div>
-                            <!-- Time -->
-                            <div class="col-9" style="display: flex;" >
-                                <div *ngFor="let item of dayplan.listtime" class="col" style="text-align: center; margin: 0; padding: 0; gap: 0;">
-                                    <div class="col" style="width:5px ;"
-                                        matTooltip="{{ item.starttime }}" matTooltipPosition="above">
-                                        <!-- Check if the time includes ":00" -->
-                                        <div *ngIf="item.starttime.includes(':00'); else noTimeDisplay" >
-                                            {{ item.starttime.replace(':00', '') }}
-                                        </div>                            
-                                        <!-- No Time Display -->
-                                        <ng-template #noTimeDisplay>
-                                            <div style="display: block;">
-                                                &nbsp;&nbsp;
-                                            </div>
-                                        </ng-template>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                   
-                </div>
             </div>
 
             <!-- ====== Data ====== -->
@@ -99,14 +69,13 @@
             <div class="row" *ngFor="let routeday of dayplan.activeroute"  style=" margin: 0; padding: 0; gap: 0;">
                 <div class="container"  style="display: flex; align-items: center; justify-content: start;">
                     <!-- Routename Name -->
-                    <div class="col-2" style="text-align: center;">
+                    <div class="col-2" style="display: flex; align-items: center;  justify-content: center;  text-align: center;  height:100%;  padding: 0px; margin: 0px;" [style.background-color]="routeday.listvplan.length==0?'#f98989':'#c9f989'">
                         {{routeday.route.routename}}
                     </div>
                     <!-- Vehicle & Time -->
-                    <div class="col-10" style="text-align: center;" >
+                    <div class="col-9" style="text-align: center;" >
                         <!-- Empty Vehicle -->
-                        <div class="container" style="display: flex; align-items: center;"  *ngIf="routeday.listvplan.length==0">
-                              <!-- Vehicle-->        
+                        <!-- <div class="container" style="display: flex; align-items: center;"  *ngIf="routeday.listvplan.length==0">
                               <div class="col-3" style="text-align: center;">
                                 ไม่มีการจัดรถ
                             </div>
@@ -121,57 +90,101 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Vehicle plan data -->
-                        <div class="container" *ngFor="let vehicle of routeday.listvplan" 
-                            style="display: flex; align-items: center;">
-                            <!-- Vehicle-->        
-                            <div class="col-3" style="text-align: center;">
-                              {{vehicle.vname}}
-                          </div>
-                           
-                          <div class="col-8" style="display: flex; background-color: green;" >
-                              <div *ngFor="let item of dayplan.listtime" class="col" style="text-align: center; margin: 0; padding: 0; gap: 0;">
-                                  <div class="col"  style="width:5px ;"
-                                      matTooltip="{{ item.starttime }}" matTooltipPosition="above">
-                                      <div style="display: block;">
-                                          &nbsp;&nbsp;
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
+                            <!-- ====== Vehicle ====== -->
+                            <div *ngFor="let vehicle of routeday.listvplan" class="row" style=" margin: 0; padding: 0; gap: 0; margin-right: 20px;  cursor: pointer;">
+                                <div class="container" style="display: flex; align-items: center;">
+                                    <!-- Vehicle Name -->
+                                    <div class="col-1" style="text-align: center; color: royalblue;background-color: lightcyan;" >
+                                        {{ vehicle.vname }}
+                                    </div>
+                            
+                                    <!-- Vehicle Data -->
+                                    <div class="col-11" style="display: flex;">
+                                        <div class="col"  *ngFor="let item of vehicle.listdata" (click)="opendayplan(item,vehicle,routeday.route.id,plandetailmodal)" 
+                                            style="text-align: center; margin: 0; padding: 0; gap: 0;">
+                                            <div class="col" 
+                                                matTooltip="{{ item.starttime }}" matTooltipPosition="above">
+                                                <!-- Check if the time includes ":00" -->
+                                                <div *ngIf="item.starttime.includes(':00'); else noTimeDisplay" 
+                                                    
+                                                     [style.background-color]="item.plancode=='' ? '#FFFFFF' : item.routeid==routeday.route.id ? '#FFE5B4' : '#CCCCCC'"
+                                                     [style.color]="item.plancode=='' ? '#FFFFFF' : item.routeid==routeday.route.id ? '#FFE5B4' : '#CCCCCC'">
+                                                    {{ item.starttime.replace(':00', '') }}
+                                                </div>
+                            
+                                                <!-- No Time Display -->
+                                                <ng-template #noTimeDisplay>
+                                                    <div style="display: block;" 
+                                                    [style.background-color]="item.plancode=='' ? '#FFFFFF' : item.routeid==routeday.route.id ? '#FFE5B4' : '#CCCCCC'">
+                                                        &nbsp;
+                                                    </div>
+                                                </ng-template>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr style="height:2px; margin: 2px;">
+                            </div>
 
+                            <!-- ====== Time ====== -->
+                            <div class="row" style=" margin: 0; padding: 0; gap: 0; margin-right: 20px; width: 100%; height: 20px;"
+                                *ngIf="routeday.listvplan.length==0"></div>
+                            <div class="row" style=" margin: 0; padding: 0; gap: 0; margin-right: 20px;">
+                                <div class="container" style="display: flex; align-items: center;">
+                                    <!-- Vehicle Name -->
+                                    <div class="col-1" style="text-align: center; background-color:lightgrey" >
+                                        Time :
+                                    </div>
+                                    <!-- Vehicle Data -->
+                                    <div class="col-11" style="display: flex;">
+                                        <div *ngFor="let item of dayplan.listtime" class="col" style="text-align: center; margin: 0; padding: 0; gap: 0;">
+                                            <div class="col" 
+                                                matTooltip="{{ item.starttime }}" matTooltipPosition="above">
+                                                <!-- Check if the time includes ":00" -->
+                                                <div *ngIf="item.starttime.includes(':00'); else noTimeDisplay"  style=" background-color:lightgrey">
+                                                    {{ item.starttime.replace(':00', '') }}
+                                                </div>                            
+                                                <!-- No Time Display -->
+                                                <ng-template #noTimeDisplay>
+                                                    <div style="display: block; background-color:lightgrey">
+                                                        &nbsp;
+                                                    </div>
+                                                </ng-template>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr style="height:2px; margin: 2px;">
+                            </div>
+                    </div>
+                    <div class="col-1" style="display: flex;  justify-content: center; align-items: center; height: 100%; cursor: pointer;" *ngIf="dayplan.noplan" >
+                        <mat-icon style="color: blue;" *ngIf="routeday.listvplan.length==0" (click) = "setdayplanfromweekplan(routeday.route)">assignment</mat-icon>
+                        <mat-icon style="color: red;" *ngIf="routeday.listvplan.length!=0" (click) = "deldayplan(routeday.route)">delete</mat-icon>
+                        <!-- <mat-checkbox  [(ngModel)]="routeday.isselect" *ngIf="routeday.listvplan.length==0" ></mat-checkbox> -->
                     </div>
                 </div>
                 <hr style="height:2px; margin: 2px;">
             </div>
-  
-          </div>
+        </div>
     </div>
 
     <div *ngIf="show.viewtype==1">
         <div class="row" style="height: 80vh; width:100vw;">
             <!-- Left Column -->
-            <div class="col-3" style="height: 60vh; width:40hw; overflow-y: scroll; overflow-x: hidden;">
-                <div *ngFor="let item of maindata">
-                    <div class="row" (dblclick)="Showroutedropoint(item,compdetailmodal)" (click)="ShowVehicleDetail(item)">
-                        <div class="container" 
-                            style="display: flex; justify-content: space-between; align-items: start; width:100hw; margin: 5px;">
-                            <div class="col ms-2" style="display:flexbox; text-align: start; cursor: pointer;">
-                                <!-- setitem 1-->
-                                {{item.routename}}
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
+            <div class="col-2" style="height: 70vh; width:40hw; overflow-y: scroll; overflow-x: hidden;">
+                <mat-list role="list">
+                    <mat-list-item *ngFor="let item of maindata" role="listitem"
+                    [style.background-color]="(activedata.id==item.id)?'#FFE5B4':'#FFFFFF'"
+                    (dblclick)="Showroutedropoint(item,compdetailmodal)" (click)="ShowVehicleDetail(item)">
+                      {{ item.routename }}
+                    </mat-list-item>
+                </mat-list>
             </div>
 
             <!-- Righ Column -->
-            <div class="col-9" style="height: 70vh; width:60hw;overflow-y: scroll">
+            <div class="col-10" style="height: 70vh; width:60hw;overflow-y: scroll">
                 <div class="row" style="display: flex;  justify-content: space-between; width: 100%; height:4vh ; 
                     background-color: lightblue; margin: 5px 30px;">
                     <div class="col-10" style="display: flex;  justify-content: start;align-items: center; height: 100%;">
@@ -275,24 +288,18 @@
         
         <div class="row" style="height: 60vh; width:100vw;">
             <!-- Left Column -->
-            <div class="col-5" style="height: 60vh; width:40hw; overflow-y: scroll; overflow-x: hidden;">
-                <div *ngFor="let item of maindata">
-                    <div class="row" (dblclick)="Showroutedropoint(item,compdetailmodal)" (click)="Showroute(item)">
-                        <div class="container" 
-                            style="display: flex; justify-content: space-between; align-items: start; width:100hw; margin: 5px;">
-                            <div class="col ms-2" style="display:flexbox; text-align: start;">
-                                <!-- setitem 1-->
-                                {{item.routename}}
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
+            <div class="col-2" style="height: 60vh; width:40hw; overflow-y: scroll; overflow-x: hidden;">
+                <mat-list role="list">
+                    <mat-list-item *ngFor="let item of maindata" role="listitem"
+                    [style.background-color]="(activedata.id==item.id)?'#FFE5B4':'#FFFFFF'"
+                    (dblclick)="Showroutedropoint(item,compdetailmodal)" (click)="Showroute(item)">
+                      {{ item.routename }}
+                    </mat-list-item>
+                </mat-list>
             </div>
 
             <!-- Righ Column -->
-            <div  class="col-7" id="map-container" style="height: 60vh; width:60hw; background-color: lightyellow;">
+            <div  class="col-10" id="map-container" style="height: 60vh; width:60hw; background-color: lightyellow;">
 
                 <div class="data-box-container" >
                         <div class="data-box m-2" *ngFor="let box of activedata.dpinroute">
