--- a/src/app/page/Company/companyprofilepage/companyprofilepage.component.scss
+++ b/src/app/page/Company/companyprofilepage/companyprofilepage.component.scss
@@ -1,8 +1,9 @@
-.profileimg {
+.companyimg {
     padding: 5px;
-    width: 5vh;
-    height: 5vh;
     border-radius: 50%;
+    height: 10vh; 
+    width: 10vh; 
     vertical-align: middle;
+    cursor: pointer;
     // border: 1px solid #cee1f0;
-  }
+}
