--- a/src/app/page/Company/companypage/companypage.component.html
+++ b/src/app/page/Company/companypage/companypage.component.html
@@ -6,7 +6,7 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="position-relative" style="height: 100vh; width:100hw;">
+<div class="position-relative" style="height: 100vh; width:100hw; overflow: hidden;">
   <!-- company & close button -->
   <div class="px-3 py-0" style="display: flex; justify-content: space-between; align-items: center; 
                   width:100%; background-color: lightblue; margin: 0;">
@@ -80,7 +80,7 @@
 
   <!-- TAB -->
   <div class="px-3 py-0">
-    <mat-tab-group  >
+    <mat-tab-group  (selectedTabChange)="onTabChange($event)" >
       <!-- employee -->
       <!-- <mat-tab label="Employee" style="background-color: lightyellow;" >
         <app-employeecomppage [activecompany]="activecompany"></app-employeecomppage>
