--- a/src/app/page/Company/searchcompanypage/searchcompanypage.component.html
+++ b/src/app/page/Company/searchcompanypage/searchcompanypage.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="position-relative" style="height: 100%; width:100%;">
 
   <!-- spinner -->
@@ -13,7 +11,7 @@
   <div *ngIf="show.viewtype==0">
     <div class="card-container">
       <div class="company-card" *ngFor="let comp of companydata">
-        <mat-card (dblclick)="opencompanydata(comp,compdetailmodal)">
+        <mat-card (dblclick)="opencompanydata(comp,compdetailmodal)" style="cursor: pointer;">
           <mat-card-header class="custom-header">
             <div mat-card-avatar>
               <img [src]="comp.complogo" class="company-logo">
@@ -57,13 +55,21 @@
                 <span>{{ comp.totaldrop }}</span>
               </div>
             </div>
-
           </mat-card-content>
         </mat-card>
       </div>
     </div>
   </div>
-
+  <div class="company-card" *ngIf="show.addcompany">
+    <mat-card >
+      <mat-card-header class="custom-header" (click)="addcompany(compprofilemodal)" style="cursor:pointer;">
+        <div mat-card-avatar style="display: flex; justify-content: space-around; align-items: center; margin-bottom: 0px;">
+          <mat-icon>add</mat-icon>
+        </div>
+        <mat-card-title class="truncate-title">Create Compay</mat-card-title>
+      </mat-card-header>
+    </mat-card>
+  </div>
 
   <div *ngIf="show.viewtype==1">
     <div class="row no guster" style="width: 100%;">
@@ -137,7 +143,8 @@
 
 <ng-template #compdetailmodal let-modal>
   <app-companypage [modal]="modal" [activecompany]="activecompany" (talk)="companytalkback($event)"></app-companypage>
+</ng-template>
 
-  <!-- <app-companypage  [modal]="modal" [activedriver]="activedriver" (talk)="driverdetailtalkback($event)" ></app-companypage> -->
-  <!-- <app-driverdetailpage  [modal]="modal" ></app-driverdetailpage> -->
+<ng-template #compprofilemodal let-modal>
+  <app-companyprofilepage [modal]="modal"> </app-companyprofilepage>
 </ng-template>
